[package]
name = "unftp-sbe-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libunftp = "0.18.2"
chrono = { version = "0.4.19", features = ["serde"] }
base64 = "0.13.0"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
futures = "0.3.19"
tokio = { version = "1", features = ["rt"] }
tokio-util = "0.6.9"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
percent-encoding = "2.1.0"
async-trait = "0.1.52"
